@@ -11,9 +11,14 @@ META.yml
 README
 t/00-load.t
 t/01-run.t
+t/02-eliminate-old-ids.t
 tag-release.pl
 t/data/fortune-synd-1/irc-conversation-4-several-convos.xml
 t/data/fortune-synd-1/screenplay-fort-sample-1.xml
+t/data/fortune-synd-eliminate-old-ids-1/fort.yaml
+t/data/fortune-synd-eliminate-old-ids-1/irc-conversation-4-several-convos.xml
+t/data/fortune-synd-eliminate-old-ids-1/screenplay-fort-sample-1.xml
 t/data/out-fortune-synd-1/PLACEHOLDER
+t/data/out-fortune-synd-eliminate-old-ids-1/PLACEHOLDER
 t/pod-coverage.t
 t/pod.t
